evaluacion de los modelos

--- a/Untitled.ipynb
+++ b/Untitled.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "id": "b2f0251c",
    "metadata": {},
    "outputs": [],
@@ -200,7 +200,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "id": "1b015731",
    "metadata": {},
    "outputs": [],
@@ -506,10 +506,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "id": "2dac2186",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Polynomial degree4Coef0.1 Accuracy:0.7204301075268817\n"
+     ]
+    }
+   ],
    "source": [
     "import numpy as np\n",
     "import matplotlib.pyplot as plt\n",
@@ -523,8 +531,8 @@
     "yy = test_set.iloc[:,8]\n",
     "# fit the model\n",
     "best_accuracy = 0\n",
-    "for dg in range(15):\n",
-    "    for coef in range(0,100, 5):\n",
+    "for dg in range(10):\n",
+    "    for coef in range(0,20,2):\n",
     "        clf = svm.SVC(kernel='poly', coef0 = float(coef/10),degree=dg, cache_size=1000)\n",
     "        clf.fit(X, Y)\n",
     "        y_pred = clf.predict(xx)\n",
@@ -540,12 +548,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "1299d00a",
+   "execution_count": 4,
+   "id": "776a6282",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Coef0.1 Accuracy:0.7204301075268817\n"
+     ]
+    }
+   ],
    "source": [
-    "for coef in range(0,100, 5):\n",
+    "for coef in range(0,50,2):\n",
     "    clf = svm.SVC(kernel='sigmoid', coef0 = float(coef/10), cache_size=1000)\n",
     "    clf.fit(X, Y)\n",
     "    y_pred = clf.predict(xx)\n",
@@ -560,10 +576,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "45b4085c",
+   "execution_count": 5,
+   "id": "0e5efb58",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      " Accuracy:0.6989247311827957\n"
+     ]
+    }
+   ],
    "source": [
     "clf = svm.SVC(kernel='linear',cache_size=1000)\n",
     "clf.fit(X, Y)\n",
@@ -574,12 +598,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "1027165b",
+   "execution_count": 7,
+   "id": "5557f15c",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Gamma 0.1 Accuracy:0.7204301075268817\n"
+     ]
+    }
+   ],
    "source": [
-    "for g in range(0,100, 5):\n",
+    "for g in range(1,50):\n",
     "    clf = svm.SVC(gamma = float(g/10), cache_size=1000)\n",
     "    clf.fit(X, Y)\n",
     "    y_pred = clf.predict(xx)\n",
@@ -594,7 +626,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "34c0a350",
+   "id": "d78aa205",
    "metadata": {},
    "source": [
     "mejores accuracys obtenidos:\n",
@@ -625,7 +657,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "01ada7bd",
+   "id": "377878bc",
    "metadata": {},
    "outputs": [],
    "source": []
